--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,12 @@
 :root {
-  --blue: #273FAD;
-  --green: #3FAD27;
-  --red: 	#ad273f;
-  --background: #EBEBEB;
-  --shapes: #FFFFFF;
-  --text-title: #3D3D4D;
-  --text: #1C1C29;
-  --text-light: #A09CB1;
+  --orange: #dfa21f;
+  --green: #6ec45b;
+  --red: 	#ee506d;
+  --background: #474747;
+  --shapes: #282828;
+  --text-title: #fff7e7;
+  --text: #ededed;
+  --text-light: #c0c0c0;
 }
 
 * {
