--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -23,7 +23,7 @@ section.task-list {
       gap: 0.25rem;
       align-items: center;
 
-      background: #fff;
+      background: none;
       font-size: 16px;
       
       input {
@@ -107,7 +107,7 @@ section.task-list {
 
               &:checked {
                 & ~ .checkmark {
-                  background-color: var(--blue);
+                  background-color: var(--orange);
                 }
 
                 & ~ .checkmark:after {
